fix: Deal with long command lines for Groovy compiler
The Groovy compiler doesn't handle long command lines well. It supports
`@argfiles` but only for listing source files, not for options. Given the
fact that the longest option tends to be the `-classpath` option, we
can use the `CLASSPATH` environment variable to shorten the command line.