@@ -2,6 +2,9 @@ package dev.jbang.source.sources;
 
 import static dev.jbang.util.JavaUtil.resolveInJavaHome;
 
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 
@@ -11,6 +14,7 @@ import dev.jbang.devkitman.Jdk;
 import dev.jbang.source.*;
 import dev.jbang.source.AppBuilder;
 import dev.jbang.source.buildsteps.CompileBuildStep;
+import dev.jbang.util.Util;
 
 public class JavaSource extends Source {
 
@@ -68,10 +72,42 @@ public class JavaSource extends Source {
 			}
 
 			@Override
-			protected String getCompilerBinary(String requestedJavaVersion) {
-				Project prj = ctx.getProject();
-				Jdk jdk = prj.projectJdkManager().getOrInstallJdk(requestedJavaVersion);
+			protected String getCompilerBinary() {
+				Project project = ctx.getProject();
+				Jdk jdk = project.projectJdk();
+				String requestedJavaVersion = project.getJavaVersion();
+				if (requestedJavaVersion == null
+						&& project.getModuleName().isPresent()
+						&& jdk.majorVersion() < 9) {
+					// Make sure we use at least Java 9 when dealing with modules
+					requestedJavaVersion = "9+";
+					jdk = project.projectJdkManager().getOrInstallJdk(requestedJavaVersion);
+				}
 				return resolveInJavaHome("javac", jdk);
+			}
+
+			@Override
+			protected List<String> getCompileCommandOptions() throws IOException {
+				List<String> optionList = new ArrayList<>();
+
+				Project project = ctx.getProject();
+				if (project.enablePreview()) {
+					optionList.add("--enable-preview");
+					optionList.add("-source");
+					optionList.add("" + project.projectJdk().majorVersion());
+				}
+				optionList.addAll(project.getMainSourceSet().getCompileOptions());
+				String path = ctx.resolveClassPath().getClassPath();
+				if (!Util.isBlankString(path)) {
+					if (project.getModuleName().isPresent()) {
+						optionList.addAll(Arrays.asList("-p", path));
+					} else {
+						optionList.addAll(Arrays.asList("-classpath", path));
+					}
+				}
+				optionList.addAll(Arrays.asList("-d", ctx.getCompileDir().toAbsolutePath().toString()));
+
+				return optionList;
 			}
 
 			@Override
